--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./udagram-reverseproxy
-    image: reverseproxy
+    image: losindau/reverseproxy:latest
   backend_user:
     build:
       context: ./udagram-api-user
-    image: udagram-api-user
+    image: losindau/udagram-api-user:latest
   backend_feed:
     build:
       context: ./udagram-api-feed
-    image: udagram-api-feed
+    image: losindau/udagram-api-feed:latest
   frontend:
     build:
       context: ./udagram-frontend
-    image: udagram-frontend:local
+    image: losindau/udagram-frontend:latest
